# annas

./: .editorconfig  .prettierignore  .prettierrc.cjs  README.md  annas.service  eslint.config.ts  index.html  loop.sh  package-lock.json  package.json  run.sh
frontend/: .oxfmtrc.json  eslint.config.ts  index.html  package-lock.json  package.json
frontend/src/: App.vue  global.css  main.ts
frontend/src/components/: button.vue  render.vue
frontend/src/lib/: camera.ts  component.ts  guid.ts  navigation.ts  url.ts  utils.ts  videos.ts  web-socket.ts
frontend/src/pages/camera/: camera.vue
frontend/src/pages/devices/: devices.vue
frontend/src/pages/loop/: content.vue  item.vue  loop.vue  use-loop.ts
frontend/src/pages/motion/: motion.vue
frontend/src/pages/stream/: stream.vue
frontend/src/pages/video/: video.vue
frontend/src/pages/video-js/: video-js.vue
mac/: index.html
mac/Annas.app/Contents/: Info.plist  document.wflow
mac/Annas.app/Contents/MacOS/: Automator Application Stub
server/: Cargo.toml
server/src/: gpio.rs  main.rs  server.py  video.rs  webcam.rs
src/: App.vue  global.css  main.ts  navigation.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: button.vue  render.vue  videos.ts
src/pages/camera/: camera.vue
src/pages/devices/: devices.vue
src/pages/stream/: stream.vue
src/pages/video/: video.vue
transcode/: package-lock.json  package.json  tsconfig.json
transcode/src/: index.ts  run.sh
(+1 files in other folders)
