[package]
resolver = "2"
edition = "2024"
name = "server"
version = "0.1.0"

[dependencies]
axum = {version = "0.8.8", features = ["ws"]}
mime_guess = "2.0.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1.51.0", features = ["full"]}
tokio-util = {version = "0.7.18", features = ["io"]}
tracing-subscriber = "0.3.23"
tower-http = { version = "0.6.8", features = ["cors", "fs"]}
axum-range = "1.0.0"
axum-extra = { version = "0.12.5", features = ["typed-header"]}

[target.'cfg(target_os = "linux")'.dependencies]
rpi-pal = "0.22.3"
